# FileOrganizationTermProject

./: .gitignore  CMakeLists.txt
Code/: CMakeLists.txt  main.cpp  toolchain.cmake
Code/inc/: IndexingProcessor.h
Code/src/: FolderWatcherCls.cpp  IndexingProcessor.cpp  md5.cpp  sha1.cpp  sha256.cpp
application/Code/: CMakeLists.txt  main.cpp  mainThread.cpp
application/Code/folderWatcher/: folderWatcher.cpp  folderWatcher.h
application/Code/inc/: FolderWatcherCls.h  IndexingProcessor.h
application/Code/src/: FolderWatcherCls.cpp  IndexingProcessor.cpp  md5.cpp
